kuber-2/AppService.yml
apiVersion: v1
kind: Service
metadata:
   name: app-service
spec:
   selector:
      app: app
   type: NodePort
   ports:
   - protocol: TCP
     port: 9000
     targetPort: app-port
