kuber-2/AppIngress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
   name: app-ingress
   annotations:
      kubernetes.io/ingress.class: "nginx"
      nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
   rules:
   - host: arch.homework
     http:
        paths:
        - path: /otusapp($|/)(.*)
          backend:
             serviceName: app-service
             servicePort: 9000
